src/test/ui/index-bot.rs
fn main() {
    (return)[0]; //~ ERROR type annotations needed
}
